manifest/objects/Consult_Fee__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consult Fees</relationshipLabel>
        <relationshipName>Consult_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Pricebook__c</fullName>
        <label>CPQ Pricebook</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CPQ_Pricebooks</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Carrier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consult_Type__c</fullName>
        <label>Consult Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consult_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copado_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Copado External Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Custom__c</fullName>
        <formula>Account__c != NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Line_of_Business</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Product_Code__c</fullName>
        <formula>IF(ISBLANK(Parent_Product__c), &apos;NULL&apos;,Parent_Product__r.ProductCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Consult Fees (Parent Product)</relationshipLabel>
        <relationshipName>Consult_Fees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Consult Fees</relationshipLabel>
        <relationshipName>Consult_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Consult Fee</label>
    <listViews>
        <fullName>All_Consult_Fees</fullName>
        <columns>NAME</columns>
        <columns>CPQ_Pricebook__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Parent_Product__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>UMR,United Health Care (UHC) / Optum</value>
        </filters>
        <label>All Consult Fees</label>
    </listViews>
    <listViews>
        <fullName>All_Current</fullName>
        <columns>NAME</columns>
        <columns>CPQ_Pricebook__c</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Parent_Product__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>BCBS TN</value>
        </filters>
        <label>All - Current</label>
    </listViews>
    <listViews>
        <fullName>Ask_the_Experts</fullName>
        <columns>NAME</columns>
        <columns>CPQ_Pricebook__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Is_Custom__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>AAD</value>
        </filters>
        <label>Ask the Experts</label>
    </listViews>
    <listViews>
        <fullName>BH_Visit_Fees</fullName>
        <columns>NAME</columns>
        <columns>CPQ_Pricebook__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Carrier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>contains</operation>
            <value>BH</value>
        </filters>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BHP1T</value>
        </filters>
        <filters>
            <field>CPQ_Pricebook__c</field>
            <operation>equals</operation>
            <value>Reseller</value>
        </filters>
        <label>BH Visit Fees</label>
    </listViews>
    <listViews>
        <fullName>Broker_Fees</fullName>
        <columns>NAME</columns>
        <columns>CPQ_Pricebook__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Is_Custom__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Consult_Type__c</field>
            <operation>notEqual</operation>
            <value>Custom</value>
        </filters>
        <filters>
            <field>CPQ_Pricebook__c</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filters>
        <label>Broker Fees</label>
    </listViews>
    <listViews>
        <fullName>Carrier</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CPQ_Pricebook__c</field>
            <operation>equals</operation>
            <value>Carrier</value>
        </filters>
        <label>Carrier</label>
    </listViews>
    <listViews>
        <fullName>Carrier_Aultcare</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>Aetna</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Carrier - Aultcare</label>
    </listViews>
    <listViews>
        <fullName>Centene</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>Centene</value>
        </filters>
        <label>Centene</label>
    </listViews>
    <listViews>
        <fullName>Consult_NOVA</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>NOVA</value>
        </filters>
        <label>Consult - NOVA</label>
    </listViews>
    <listViews>
        <fullName>Consults_BCBS_Cali</fullName>
        <columns>NAME</columns>
        <columns>CPQ_Pricebook__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Parent_Product__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>Blue Shield of California</value>
        </filters>
        <label>Consults BCBS Cali</label>
    </listViews>
    <listViews>
        <fullName>Custom_Pricing</fullName>
        <columns>NAME</columns>
        <columns>CPQ_Pricebook__c</columns>
        <columns>Account__c</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Consult_Type__c</field>
            <operation>equals</operation>
            <value>Custom</value>
        </filters>
        <label>* Custom Pricing</label>
    </listViews>
    <listViews>
        <fullName>GM_Consult_Fee</fullName>
        <columns>NAME</columns>
        <columns>CPQ_Pricebook__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Is_Custom__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Consult_Type__c</field>
            <operation>notEqual</operation>
            <value>Custom</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>GM - Consult Fee</value>
        </filters>
        <label>GM - Consult Fee</label>
    </listViews>
    <listViews>
        <fullName>Highmark</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Carrier__c</field>
            <operation>equals</operation>
            <value>Highmark</value>
        </filters>
        <label>Highmark</label>
    </listViews>
    <listViews>
        <fullName>MYSTR3</fullName>
        <columns>NAME</columns>
        <columns>CPQ_Pricebook__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Parent_Product__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>MyStrength Complete</value>
        </filters>
        <label>MYSTR3</label>
    </listViews>
    <listViews>
        <fullName>Reseller</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Carrier__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CPQ_Pricebook__c</field>
            <operation>equals</operation>
            <value>Reseller</value>
        </filters>
        <label>Reseller</label>
    </listViews>
    <nameField>
        <label>Consult Fee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consult Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>